signup is working

--- a/views/login-signup.handlebars
+++ b/views/login-signup.handlebars
@@ -3,7 +3,7 @@
     <h2>Login</h2>
 
     <form class='form login-form'>
-    <div class='form-group'>
+      <div class='form-group'>
         <label for='email-login'>email:</label>
         <input class='form-input' type='text' id='email-login' />
       </div>
@@ -39,4 +39,5 @@
   </div>
 </div>
 
-<script src='./js/login.js'></script>
+<script src='/js/login.js'></script>
+<script src='/js/signup.js'></script>
