--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,20 @@
     <link rel='stylesheet' href='/css/style.css' />
   </head>
   <body class='bg-scroll bg-cover'>
+
+    <!--navbar-->
+    <nav class='navbar bg-white'>
+      <div class='navbar-logo'>
+        <!--  logo goes here -->
+        <img src="alt='Logo'" width='100' height='50' />
+      </div>
+      <div class='navbar-links'>
+        <a
+          href='../login-signup.handlebars'
+          class='navbar-login hover:underline'
+        >Login</a>
+      </div>
+    </nav>
     {{{body}}}
   </body>
 </html>
