--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,21 +6,35 @@
     <script src='https://cdn.tailwindcss.com'></script>
     <link rel='stylesheet' href='/css/style.css' />
   </head>
+  <!--background-->
   <body class='bg-scroll bg-cover'>
 
     <!--navbar-->
-    <nav class='navbar bg-white'>
-      <div class='navbar-logo'>
-        <!--  logo goes here -->
-        <img src="alt='Logo'" width='100' height='50' />
-      </div>
-      <div class='navbar-links'>
-        <a
-          href='../login-signup.handlebars'
-          class='navbar-login hover:underline'
-        >Login</a>
+    <nav class='bg-white'>
+      <div class='container mx-auto flex justify-between items-center py-4'>
+        <!-- Left-aligned logo -->
+        <a href='' class='text-white text-2xl font-semibold flex items-center'>
+          <img
+            class='object-center logo w-30 h-30'
+            src=''
+            alt='logo'
+            width='100'
+            height='100'
+          />
+        </a>
+
+        <!-- Login button aligned with logo to the right -->
+        <ul class='flex space-x-4'>
+          <li class='navbar-links'>
+            <a
+              href='../login-signup.handlebars'
+              class='navbar-login hover:underline text-color-black'
+            >Login</a>
+          </li>
+        </ul>
       </div>
     </nav>
+
     {{{body}}}
   </body>
 </html>
