login button works now

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,7 @@
         <ul class='flex space-x-4'>
           <li class='navbar-links'>
             <a
-              href='../login-signup.handlebars'
+              href='/login'
               class='navbar-login hover:underline text-color-black'
             >Login</a>
           </li>
