added search bar

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,12 @@
-<p>Welcome!!</p>
+<div class='search-container'>
+  <!-- Search input -->
+  <input type='text' placeholder='Search...' class='search-input' />
+  <!-- Dropdown button -->
+  <button class='dropdown-btn'>Search by:</button>
+  <!-- Dropdown content -->
+  <div class='dropdown-content'>
+    <a href='#'>Author</a>
+    <a href='#'>Genre </a>
+    <a href='#'>Title </a>
+  </div>
+</div>
