--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,69 @@
 body {
   background-image: url(../images/bgbooks.jpeg);
 }
+/* margin and padding */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* search bar */
+.search-container {
+  display: flex;
+  align-items: center;
+  max-width: 400px;
+  margin: 20px auto;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+/* search input */
+.search-input {
+  flex: 1;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  padding: 8px;
+}
+
+/* dropdown button */
+.dropdown-btn {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+/* Dropdown box */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #b6b3b3;
+  min-width: 160px;
+  z-index: 1;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+/* dropdown menu on hover */
+.search-container:hover .dropdown-content {
+  display: list-item;
+}
+
+/* dropdown links */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #faf9fc;
+}
