--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,18 @@
           </li>
         </ul>
       </div>
+      
+      <div>
+        <!-- Conditionally render login or logout links -->
+        {{#if logged_in}}
+        <button class="no-button" id="logout">logout</button>
+        {{/if}}
+      </div>
+
+
     </nav>
+
+    
 
     {{{body}}}
   </body>
