added frontend to maybe display the data from axios

--- a/views/partials/items.handlebars
+++ b/views/partials/items.handlebars
@@ -1,1 +1,11 @@
 {{! Any partials will go here }}
+<article>
+
+  <h2>{{title}}</h2>
+  <p>Author: {{author}}</p>
+  {{! cover ID }}
+  <button type='submit'></button>
+  {{! save/like/favorite button }}
+
+</article>
+<script src='/js/savedBooks.js'></script>
