added back-end save for books

--- a/views/partials/items.handlebars
+++ b/views/partials/items.handlebars
@@ -4,6 +4,7 @@
   <h2>{{title}}</h2>
   <p>Author: {{author}}</p>
   {{! cover ID }}
+  <img src="https://covers.openlibrary.org/a/olid/{{cover}}-M.jpg" alt="cover for {{title}}">
   <button type='submit'></button>
   {{! save/like/favorite button }}
 
