linked the logout js in the handle bars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,8 +38,12 @@
       
     </nav>
 
-    
+    <main>
+      {{{body}}}     
+    </main>
 
-    {{{body}}}
+    {{#if logged_in}}
+    <script src="/js/logout.js"></script>
+    {{/if}}
   </body>
 </html>
