--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -69,7 +69,7 @@
         />
         <button
           type='submit'
-          class='absolute top-0 end-0 p-2.5 text-sm font-medium h-full text-white bg-slate-100 rounded-e-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800'
+          class='absolute top-0 end-0 p-2.5 text-sm font-medium h-full text-white bg-blue-500 rounded-e-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800'
         >
           <svg
             class='w-4 h-4'
