--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,7 @@
 <!-- Search Bar-->
-<section>
+<section
+  class='Search-bar object-position:center flex justify-center items-center'
+>
   <form>
     <div class='flex'>
       <label
@@ -59,7 +61,7 @@
 
         </ul>
       </div>
-      <div class='relative w-full'>
+      <div class='relative w-80'>
         <input
           type='search'
           id='search-dropdown'
@@ -98,119 +100,123 @@
   </script>
 </section>
 
-<!--Carousel-->
-<div id='default-carousel' class='relative w-full' data-carousel='slide'>
-  <!-- Carousel wrapper -->
-  <div class='relative h-56 overflow-hidden rounded-lg md:h-96 bg-transparent'>
-    <!-- Slide 1 -->
-    <div class='hidden duration-700 ease-in-out data-carousel-item'>
-      <div class='carousel-item'>
-        <img
-          src=''
-          class='absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2'
-          alt=''
-        />
-      </div>
-      <div class='carousel-item'>
-        <!-- Add your content here -->
+<main>
+  <!--Carousel-->
+  <div id='default-carousel' class='relative w-full' data-carousel='slide'>
+    <!-- Carousel wrapper -->
+    <div
+      class='relative h-56 overflow-hidden rounded-lg md:h-96 bg-transparent'
+    >
+      <!-- Slide 1 -->
+      <div class='hidden duration-700 ease-in-out data-carousel-item'>
+        <div class='carousel-item'>
+          <img
+            src=''
+            class='absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2'
+            alt=''
+          />
+        </div>
+        <div class='carousel-item'>
+          <!-- Add your content here -->
+        </div>
+        <!-- -->
       </div>
       <!-- -->
     </div>
-    <!-- -->
-  </div>
-  <!-- Slider indicators -->
-  <div
-    class='absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse'
-  >
-    <button
-      type='button'
-      class='w-3 h-3 rounded-full'
-      aria-current='true'
-      aria-label='Slide 1'
-      data-carousel-slide-to='0'
-    ></button>
-    <button
-      type='button'
-      class='w-3 h-3 rounded-full'
-      aria-current='false'
-      aria-label='Slide 2'
-      data-carousel-slide-to='1'
-    ></button>
-    <button
-      type='button'
-      class='w-3 h-3 rounded-full'
-      aria-current='false'
-      aria-label='Slide 3'
-      data-carousel-slide-to='2'
-    ></button>
-    <button
-      type='button'
-      class='w-3 h-3 rounded-full'
-      aria-current='false'
-      aria-label='Slide 4'
-      data-carousel-slide-to='3'
-    ></button>
-    <button
-      type='button'
-      class='w-3 h-3 rounded-full'
-      aria-current='false'
-      aria-label='Slide 5'
-      data-carousel-slide-to='4'
-    ></button>
-  </div>
-  <!-- Slider controls -->
-  <button
-    type='button'
-    class='absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none'
-    data-carousel-prev
-  >
-    <span
-      class='inline-flex items-center justify-center w-10 h-10 rounded-full /30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none'
+    <!-- Slider indicators -->
+    <div
+      class='absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse'
     >
-      <svg
-        class='w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180'
-        aria-hidden='true'
-        xmlns='http://www.w3.org/2000/svg'
-        fill='none'
-        viewBox='0 0 6 10'
-      >
-        <path
-          stroke='currentColor'
-          stroke-linecap='round'
-          stroke-linejoin='round'
-          stroke-width='2'
-          d='M5 1 1 5l4 4'
-        />
-      </svg>
-      <span class='sr-only'>Previous</span>
-    </span>
-  </button>
-  <button
-    type='button'
-    class='absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none'
-    data-carousel-next
-  >
-    <span
-      class='inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none'
+      <button
+        type='button'
+        class='w-3 h-3 rounded-full'
+        aria-current='true'
+        aria-label='Slide 1'
+        data-carousel-slide-to='0'
+      ></button>
+      <button
+        type='button'
+        class='w-3 h-3 rounded-full'
+        aria-current='false'
+        aria-label='Slide 2'
+        data-carousel-slide-to='1'
+      ></button>
+      <button
+        type='button'
+        class='w-3 h-3 rounded-full'
+        aria-current='false'
+        aria-label='Slide 3'
+        data-carousel-slide-to='2'
+      ></button>
+      <button
+        type='button'
+        class='w-3 h-3 rounded-full'
+        aria-current='false'
+        aria-label='Slide 4'
+        data-carousel-slide-to='3'
+      ></button>
+      <button
+        type='button'
+        class='w-3 h-3 rounded-full'
+        aria-current='false'
+        aria-label='Slide 5'
+        data-carousel-slide-to='4'
+      ></button>
+    </div>
+    <!-- Slider controls -->
+    <button
+      type='button'
+      class='absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none'
+      data-carousel-prev
     >
-      <svg
-        class='w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180'
-        aria-hidden='true'
-        xmlns='http://www.w3.org/2000/svg'
-        fill='none'
-        viewBox='0 0 6 10'
+      <span
+        class='inline-flex items-center justify-center w-10 h-10 rounded-full /30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none'
       >
-        <path
-          stroke='currentColor'
-          stroke-linecap='round'
-          stroke-linejoin='round'
-          stroke-width='2'
-          d='m1 9 4-4-4-4'
-        />
-      </svg>
-      <span class='sr-only'>Next</span>
-    </span>
-  </button>
-</div>
+        <svg
+          class='w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180'
+          aria-hidden='true'
+          xmlns='http://www.w3.org/2000/svg'
+          fill='none'
+          viewBox='0 0 6 10'
+        >
+          <path
+            stroke='currentColor'
+            stroke-linecap='round'
+            stroke-linejoin='round'
+            stroke-width='2'
+            d='M5 1 1 5l4 4'
+          />
+        </svg>
+        <span class='sr-only'>Previous</span>
+      </span>
+    </button>
+    <button
+      type='button'
+      class='absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none'
+      data-carousel-next
+    >
+      <span
+        class='inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none'
+      >
+        <svg
+          class='w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180'
+          aria-hidden='true'
+          xmlns='http://www.w3.org/2000/svg'
+          fill='none'
+          viewBox='0 0 6 10'
+        >
+          <path
+            stroke='currentColor'
+            stroke-linecap='round'
+            stroke-linejoin='round'
+            stroke-width='2'
+            d='m1 9 4-4-4-4'
+          />
+        </svg>
+        <span class='sr-only'>Next</span>
+      </span>
+    </button>
+  </div>
+</main>
 
 <script src='/js/home.js'></script>
