--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='/css/style.css' />
   </head>
   <!--background-->
-  <body class='bg-scroll bg-cover'>
+  <header>
 
     <!--navbar-->
     <nav class='bg-white'>
@@ -24,21 +24,21 @@
         </a>
 
         <!-- Logout button aligned with logo to the right -->
-        <div>          
-        <ul class='flex space-x-4'>
-          <li class='navbar-links'>
-            {{#if logged_in}}
-              <button class="logout-button" id="logout">Logout</button>
-            {{/if}}
-          </li>
-        </ul>
+        <div>
+          <ul class='flex space-x-4'>
+            <li class='navbar-links'>
+              {{#if logged_in}}
+                <button class='logout-button' id='logout'>Logout</button>
+              {{/if}}
+            </li>
+          </ul>
 
         </div>
-      </div>    
-      
-    </nav>
+      </div>
 
-    
+    </nav>
+  </header>
+  <body class='bg-scroll bg-cover'>
 
     {{{body}}}
   </body>
