centered login/signup form

--- a/views/login-signup.handlebars
+++ b/views/login-signup.handlebars
@@ -1,5 +1,5 @@
 <!-- new login -->
-<div class='flex justify-center'>
+<div class='flex justify-center items-center h-screen'>
   <div
     class='row w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 md:p-8'
   >
