--- a/views/login-signup.handlebars
+++ b/views/login-signup.handlebars
@@ -4,7 +4,7 @@
     class='row w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 md:p-8'
   >
     <div class='col-md-6 space-y-6'>
-      <h5 class='text-xl font-medium text-gray-900 dark:text-white'>
+      <h5 class='text-xl font-medium text-gray-900'>
         Login to our platform
       </h5>
 
@@ -29,7 +29,7 @@
         <div class='form-group'>
           <button
             type='submit'
-            class='w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800'
+            class='w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center my-4'
           >
             Login to your account
           </button>
@@ -38,7 +38,7 @@
     </div>
 
     <div class='col-md-6 space-y-6'>
-      <h4 class='text-xl font-medium text-gray-900 dark:text-white'>
+      <h4 class='text-xl font-medium text-gray-900 my-6'>
         Not registered? Sign up
       </h4>
 
@@ -76,7 +76,7 @@
         <div class='form-group'>
           <button
             type='submit'
-            class='w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800'
+            class='w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center my-4'
           >
             Sign Up
           </button>
