--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,12 +4,12 @@
     <div class='flex'>
       <label
         for='search-dropdown'
-        class='mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white'
+        class='mb-2 text-sm font-medium text-gray-900 sr-only'
       ></label>
       <button
         id='dropdown-button'
         data-dropdown-toggle='dropdown'
-        class='display:list flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-s-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600'
+        class='display:list flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-s-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100'
         type='button'
         onclick='toggleDropdown()'
       >
@@ -32,28 +32,28 @@
       </button>
       <div
         id='dropdown'
-        class='z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700'
+        class='z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44'
       >
         <ul
-          class='py-2 text-sm text-gray-700 dark:text-gray-200'
+          class='py-2 text-sm text-gray-700'
           aria-labelledby='dropdown-button'
         >
           <li>
             <button
               type='button'
-              class='inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white'
+              class='inline-flex w-full px-4 py-2 hover:bg-gray-100'
             >Title</button>
           </li>
           <li>
             <button
               type='button'
-              class='inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white'
+              class='inline-flex w-full px-4 py-2 hover:bg-gray-100'
             >Author</button>
           </li>
           <li>
             <button
               type='button'
-              class='inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white'
+              class='inline-flex w-full px-4 py-2 hover:bg-gray-100'
             >Genre</button>
           </li>
 
@@ -63,13 +63,13 @@
         <input
           type='search'
           id='search-dropdown'
-          class='block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-e-lg border-s-gray-50 border-s-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-s-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500'
+          class='block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-e-lg border-s-gray-50 border-s-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500'
           placeholder='Search...'
           required
         />
         <button
           type='submit'
-          class='absolute top-0 end-0 p-2.5 text-sm font-medium h-full text-white bg-blue-500 rounded-e-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800'
+          class='absolute top-0 end-0 p-2.5 text-sm font-medium h-full text-white bg-blue-500 rounded-e-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300'
         >
           <svg
             class='w-4 h-4'
