--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,39 +6,41 @@
     <script src='https://cdn.tailwindcss.com'></script>
     <link rel='stylesheet' href='/css/style.css' />
   </head>
-
-  <header>
-    <!--navbar-->
-    <nav class='bg-white'>
-      <div class='container mx-auto flex justify-between items-center py-4'>
-        <!-- Left-aligned logo -->
-        <a href='' class='text-white text-2xl font-semibold flex items-center'>
-          <img
-            class='object-center logo w-30 h-30'
-            src=''
-            alt='logo'
-            width='100'
-            height='100'
-          />
-        </a>
-
-        <!-- Logout button aligned with logo to the right -->
-        <div>
-          <ul class='flex space-x-4'>
-            <li class='navbar-links'>
-              {{#if logged_in}}
-                <button class='logout-button' id='logout'>Logout</button>
-              {{/if}}
-            </li>
-          </ul>
-
-        </div>
-      </div>
-
-    </nav>
-  </header>
   <!--background-->
   <body class='bg-scroll bg-cover'>
+    <header>
+      <!--navbar-->
+      <nav class='bg-white'>
+        <div class='container mx-auto flex justify-between items-center py-4'>
+          <!-- Left-aligned logo -->
+          <a
+            href=''
+            class='text-white text-2xl font-semibold flex items-center'
+          >
+            <img
+              class='object-center logo w-30 h-30'
+              src=''
+              alt='logo'
+              width='100'
+              height='100'
+            />
+          </a>
+
+          <!-- Logout button aligned with logo to the right -->
+          <div>
+            <ul class='flex space-x-4'>
+              <li class='navbar-links'>
+                {{#if logged_in}}
+                  <button class='logout-button' id='logout'>Logout</button>
+                {{/if}}
+              </li>
+            </ul>
+
+          </div>
+        </div>
+
+      </nav>
+    </header>
 
     {{{body}}}
     <main>
