--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -68,6 +68,7 @@
           required
         />
         <button
+          id="submit"
           type='submit'
           class='absolute top-0 end-0 p-2.5 text-sm font-medium h-full text-white bg-blue-500 rounded-e-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300'
         >
