--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -69,6 +69,7 @@
         />
         <button
           type='submit'
+          id = "submitBtn"
           class='absolute top-0 end-0 p-2.5 text-sm font-medium h-full text-white bg-blue-500 rounded-e-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300'
         >
           <svg
@@ -159,6 +160,7 @@
     ></button>
   </div>
   <!-- Slider controls -->
+  {{!-- Previous Arrow --}}
   <button
     type='button'
     class='absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none'
@@ -185,6 +187,7 @@
       <span class='sr-only'>Previous</span>
     </span>
   </button>
+  {{!-- Next Arrow --}}
   <button
     type='button'
     class='absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none'
@@ -213,4 +216,6 @@
   </button>
 </div>
 
-<script src='/js/home.js'></script>
+<script src="/js/home.js"></script>
+
+
