--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -102,22 +102,8 @@
 <div id='default-carousel' class='relative w-full' data-carousel='slide'>
   <!-- Carousel wrapper -->
   <div class='relative h-56 overflow-hidden rounded-lg md:h-96 bg-transparent'>
-    <!-- Slide 1 -->
-    <div class='hidden duration-700 ease-in-out data-carousel-item'>
-      <div class='carousel-item'>
-        <img
-          src=''
-          class='absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2'
-          alt=''
-        />
-      </div>
-      <div class='carousel-item'>
-        <!-- Add your content here -->
-      </div>
-      <!-- -->
-    </div>
-    <!-- -->
-  </div>
+    <!-- Slides -->
+    {{bookscover}}
   <!-- Slider indicators -->
   <div
     class='absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse'
