--- a/views/partials/carousel-items.handlebars
+++ b/views/partials/carousel-items.handlebars
@@ -1,8 +1,8 @@
-{{#each images}}
+{{#each books}}
   <div class='hidden duration-700 ease-in-out data-carousel-item'>
     <div class='carousel-item'>
       <img
-        src='images/{{bookcover}}'
+        src='images/{{cover}}'
         class='absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2'
         alt=''
       />
@@ -10,16 +10,16 @@
   </div>
 {{/each}}
 
-<div
+<!--carousel buttons <div
   class='absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse'
 >
-  {{#each buttons}}
+  {{#each buttons[index]}}
     <button
       type='button'
       class='w-3 h-3 rounded-full'
-      aria-current={{if slide 'true' 'false'}}
-      aria-label='Slide {{slide}}'
-      data-carousel-slide-to='{{slide}}'
+      aria-current={{if index 'true' 'false'}}
+      aria-label='Slide {{index}}'
+      data-carousel-slide-to='{{index}}'
     ></button>
   {{/each}}
-</div>
+</div> -->
