added finished footer

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,11 +43,55 @@
     </header>
 
     <main>
-  {{{body}}}
+      {{{body}}}
     </main>
 
     {{#if logged_in}}
       <script src='/js/logout.js'></script>
     {{/if}}
+
+    <!--footer -->
+
+    <footer class='bg-transparent rounded-lg shadow m-4'>
+      <div
+        class='w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between'
+      >
+        <span class='text-sm text-white sm:text-center'>© 2024
+          <a href='' class='hover:underline'>Lit-Lit™</a>.
+
+        </span>
+
+        <ul
+          class='flex flex-wrap items-center mt-3 text-sm font-medium text-white sm:mt-0'
+        >
+          <li>
+            <a
+              href='https://github.com/MikeNguyen1092'
+              class='hover:underline me-4 md:me-6'
+            >Michael Nguyen</a>
+          </li>
+          <li>
+            <a
+              href='https://github.com/a-nord'
+              class='hover:underline me-4 md:me-6'
+            >Ashley Nord</a>
+          </li>
+          <li>
+            <a
+              href='https://github.com/Aricoria10'
+              class='hover:underline me-4 md:me-6'
+            >Aletheia Bentley
+            </a>
+          </li>
+          <li>
+            <a
+              href='https://github.com/Jazminnova'
+              class='hover:underline me-4 md:me-6'
+            >Jazmin Nova</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+
   </body>
 </html>
