adding rendering for book covers

--- a/views/partials/carousel-items.handlebars
+++ b/views/partials/carousel-items.handlebars
@@ -10,6 +10,8 @@
   </div>
 {{/each}}
 
+<script></script>
+
 <!--carousel buttons <div
   class='absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse'
 >
