adjusted the book-page

--- a/views/book-page.handlebars
+++ b/views/book-page.handlebars
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+{{!-- there is no option for synposis so let's make the focus on the page what everyone is saying about the book if we can get this data rendered I may work on a link to the open library page for the book to make up. But that is gonna be at the end --}}
 <body>
     <head>
         <h1>{{title}}</h1>
@@ -14,5 +15,8 @@
     </div>
     {{author_name}}
     {{ISBN}}
+    {{rating_average}}
+
+    {{!-- comments down here --}}
 </body>
 </html>
