working on getting the like button to work

--- a/views/partials/items.handlebars
+++ b/views/partials/items.handlebars
@@ -6,7 +6,7 @@
 
   <img src="https://covers.openlibrary.org/b/olid/{{cover_edition_key}}-M.jpg" alt="cover for {{title}}">
 
-  <button type='submit'></button>
+  <button type='submit' class='liked'>Liked</button>
   {{! save/like/favorite button }}
 
 </article>
