fixed image quality

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 /* backgorund for the three main pages*/
 body {
-  background-image: url(../images/bgbooks.jpeg);
+  background-image: url(../images/books.jpeg);
 }
 
 .search-bar {
