--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='/css/style.css' />
   </head>
   <!--background-->
-  <body class='bg-scroll bg-cover'>
+  <body class='bg-scroll'>
     <header>
       <!--navbar-->
       <nav class='bg-white'>
