styled the results page

--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,4 +1,8 @@
 {{!-- after the axios results render this page. --}}
+<section class="flex justify-center">
+<div class="searchResults border border-black-200 rounded-lg ">
 {{#each globalBooks}}
     {{> items}}
 {{/each}}
+</div>
+</section>
