--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,10 @@
 body {
   background: url(../images/books.jpeg) repeat center center fixed;
   background-size: cover;
-  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: relative;
   overflow: hidden;
 }
 
@@ -25,6 +28,10 @@ body {
 }
 
 footer {
-  position: relative;
-  top: -80px;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  flex-wrap: nowrap;  
+  width: 100vw;
+  justify-content: space-between;
 }
