logo added with white bg and works on all pages

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,21 @@
     <header>
       {{#if logged_in}}
       <!--navbar-->
+      <nav class="bg-transparent">
+      <div class="container mx-auto flex justify-between items-left py-4">
+        <!--media query -->
+        <div
+          class="bg-cover bg-transparent justify-start p-8">
+          
+        </div>
+
+        <img
+          class='flex justify-start bg-white'
+          src='/images/Lit-Lit-logo.png'
+          alt='logo'
+          width='100'
+          height='100'
+        />
       <nav class='bg-transparent'>
         <!-- Logout button aligned with logo to the right -->
         <div class="flex justify-end">
