--- a/views/book-page.handlebars
+++ b/views/book-page.handlebars
@@ -25,7 +25,7 @@
   <textarea id='review box-border h-32 w-32 p-4 border-4 ' name='review' rows='4' required></textarea><br />
 </div>
 <div>
-  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2  focus:outline-none">Submit Review</button>
+  <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded m-3">Submit Review</button>
 </div>
 </form>
 
@@ -58,4 +58,4 @@
         </tbody>
       </table>
     </div>
-<script src='script.js'></script>
+<script src='/js/postreviews.js'></script>
