--- a/views/partials/items.handlebars
+++ b/views/partials/items.handlebars
@@ -5,9 +5,12 @@
   {{! cover ID }}
 
   <img src="https://covers.openlibrary.org/b/olid/{{cover_edition_key}}-M.jpg" alt="cover for {{title}}">
+  {{! save/like/favorite button }}
+  <p class="hidden">{{isbn}}</p>
+  <button type='button' id="book-results">Learn more</button>
 
   <button type='submit' class='liked'>Liked</button>
-  {{! save/like/favorite button }}
-
 </article>
+
 <script src='/js/savedBooks.js'></script>
+<script src="/js/choosebook.js"></script>
